--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 <body>
   <img id="hand" src="img/wheel/arrow.png">
-  <img id="wheel" src="img/wheel/whell.png">
+  <img id="wheel" src="img/wheel/whell.png" style="
+    width: 512px;
+    height: 320px;
+    margin-right: 20px;
+">
 
   <img id="prize1" class="prizes" src="img/gifts/1.jpg">
   <img id="prize2" class="prizes" src="img/gifts/2.jpg">
