--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     margin-right: 20px;
 ">
 
-  <img id="prize1" class="prizes" src="img/gifts/1.jpg">
-  <img id="prize2" class="prizes" src="img/gifts/2.jpg">
-  <img id="prize3" class="prizes" src="img/gifts/3.jpg">
-  <img id="prize4" class="prizes" src="img/gifts/4.jpg">
-  <img id="prize5" class="prizes" src="img/gifts/5.jpg">
-  <img id="prize6" class="prizes" src="img/gifts/6.jpg">
-  <img id="prize7" class="prizes" src="img/gifts/7.jpg">
-  <img id="prize8" class="prizes" src="img/gifts/8.jpg">
-  <img id="prize9" class="prizes" src="img/gifts/9.jpg">
+  <img id="prize1" class="prizes" src="img/gifts/1.png">
+  <img id="prize2" class="prizes" src="img/gifts/2.png">
+  <img id="prize3" class="prizes" src="img/gifts/3.png">
+  <img id="prize4" class="prizes" src="img/gifts/4.png">
+  <img id="prize5" class="prizes" src="img/gifts/5.png">
+  <img id="prize6" class="prizes" src="img/gifts/6.png">
+  <img id="prize7" class="prizes" src="img/gifts/7.png">
+  <img id="prize8" class="prizes" src="img/gifts/8.png">
+  <img id="prize9" class="prizes" src="img/gifts/9.png">
 </body>
 
 
