--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 
 <body>
   <img id="hand" src="img/wheel/arrow.png">
-  <img id="wheel" src="img/wheel/whell.png" style="
-    width: 512px;
-    height: 320px;
-    margin-right: 20px;
-">
+  <img id="wheel" src="img/wheel/whell.png">
 
   <img id="prize1" class="prizes" src="img/gifts/1.png">
   <img id="prize2" class="prizes" src="img/gifts/2.png">
@@ -30,6 +26,7 @@
   <img id="prize7" class="prizes" src="img/gifts/7.png">
   <img id="prize8" class="prizes" src="img/gifts/8.png">
   <img id="prize9" class="prizes" src="img/gifts/9.png">
+  <img id="no_spins" class="spin" src="img/wheel/no_spins.png">
 </body>
 
 
